<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="15dp"
        android:entries="@array/array"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/details" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/show_list" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/studentList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="25sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/hello_text"
            android:textSize="36sp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/increaseTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="47dp"
                android:backgroundTint="#85A5A0"
                android:minWidth="65dp"
                android:minHeight="47dp"
                android:text="@string/increase_size"
                android:textSize="16sp"
                android:visibility="gone"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/decreaseTextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:height="47dp"
                android:backgroundTint="#B39393"
                android:minWidth="65dp"
                android:minHeight="47dp"
                android:text="@string/decrease_size"
                android:textSize="16sp"
                android:visibility="gone"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal"
                android:text=""
                android:textSize="18sp"
                android:visibility="visible" />
        </LinearLayout>

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#BC6666"
            android:minHeight="47dp"
            android:text="@string/send"
            android:textSize="13sp"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>